--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                     <div class="computer-name">${name}</div>
                     <div class="info">상태: <span class="status">${info.status}</span></div>
                     <div class="info">로그 시간: <span class="time">${displayTime}</span></div>
-                    ${fileNameHtml}  // 파일 내용, 예시 : 로비_33번_1234
+                    ${fileNameHtml}
                 `;
                 // ### 수정 끝 ###
 
